--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="ui borderless menu">
+<div class="ui borderless top menu">
   <div class="ui container">
     <a class="ui fitted item"><i class="facebook f icon"></i></a>
     <a class="ui fitted item"><i class="twitter icon"></i></a>
@@ -28,6 +28,46 @@
     </div>
   </div>
 </div>
+
+<img class="ui centered image" src="https://cdn.shopify.com/s/files/1/1035/5187/t/5/assets/logo.png?12738032654134160651" >
+
+<div class="ui borderless middle menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">something</div>
+      </div>
+    </div>
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">something</div>
+      </div>
+    </div>
+    <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">something</div>
+      </div>
+    </div>
+    <div class="ui dropdown item">
+      <div class="text">BRAND</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">something</div>
+      </div>
+    </div>
+    <a class="ui item">SEARCH</a>
+  </div>
+</div>
+
+<img class="ui fluid image" src="https://cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?12738032654134160651">
+
+
 <script>
   $('.ui.dropdown').dropdown('hover');
 </script>
