--- a/index.html
+++ b/index.html
@@ -65,6 +65,44 @@
   </div>
 </div>
 <img class="ui fluid image" src="https://cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?12738032654134160651">
+
+<div class="black-background">
+  <div class="ui three column grid container">
+    <div class="ui column">
+      <div class="ui list">
+        <h2>Navigation</h2>
+        <a class="item">About us</a>
+        <a class="item">Videos</a>
+        <a class="item">Store Location</a>
+        <a class="item">Shipping & Returns</a>
+        <a class="item">Terms & Conditions</a>
+        <a class="item">Privacy</a>
+      </div>
+    </div>
+    <div class="ui column">
+      <div class="ui list">
+        <h2>Main Menu</h2>
+        <a class="item">Men</a>
+        <a class="item">Women</a>
+        <a class="item">Kids</a>
+        <a class="item">Brands</a>
+        <a class="item">Search</a>
+      </div>
+    </div>
+    <div class="ui column">
+      <div class="ui list">
+        <h2>Navigation</h2>
+        <a class="item">About us</a>
+        <a class="item">Videos</a>
+        <a class="item">Store Location</a>
+        <a class="item">Shipping & Returns</a>
+        <a class="item">Terms & Conditions</a>
+        <a class="item">Privacy</a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
   $('.ui.dropdown').dropdown('hover');
 </script>
